--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 "update_url": "https://clients2.google.com/service/update2/crx",
 
   "name": "InvCounter",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "manifest_version": 2,
-  "description": "Tells how many items are in stock at HotTopic.com, BoxLunch.com, Target.com, and Emp.co.uk",
+  "description": "Tells how many items are in stock at Funko-Shop.com, HotTopic.com, BoxLunch.com, Target.com, and Emp.co.uk",
   "homepage_url": "https://reddit.com/u/regexr",
   "background": {
     "scripts": [
