--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 "update_url": "https://clients2.google.com/service/update2/crx",
 
   "name": "InvCounter",
-  "version": "1.16.0",
+  "version": "1.17.0",
   "manifest_version": 2,
   "description": "Tells how many items are in stock at Funko-Shop.com, HotTopic.com, GalacticToys.com, Target.com, and Emp.co.uk",
   "homepage_url": "https://reddit.com/u/regexr",
@@ -15,6 +15,11 @@
   },
   "browser_action": {
     "default_title": "InvCounter"
+  },
+  "icons": { 
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
   },
   "permissions": [
     "https://shop.funko.com/*",
