added support for extensionmetric.js

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
   "background": {
     "scripts": [
       "jquery.js",
-      "background.js"
+      "background.js",
+      "extensionmetric.js"
     ],
     "persistent": true
   },
